--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "whatsapp-web.js": "^1.22.1"
+    "qrcode-terminal": "^0.12.0"
   }
 }
