--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "whatsapp-web.js": "^1.22.1"
+    "whatsapp-web.js": "^1.22.1",
     "qrcode-terminal": "^0.12.0"
   }
 }
